submodule mujoco-lidar

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/diff-surfel-rasterization"]
 	path = submodules/diff-surfel-rasterization
 	url = https://github.com/hbb1/diff-surfel-rasterization.git
+[submodule "submodules/MuJoCo-LiDAR"]
+	path = submodules/MuJoCo-LiDAR
+	url = https://github.com/TATP-233/MuJoCo-LiDAR
