--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/MuJoCo-LiDAR"]
 	path = submodules/MuJoCo-LiDAR
 	url = https://github.com/TATP-233/MuJoCo-LiDAR
+[submodule "submodules/XML-Editor"]
+	path = submodules/XML-Editor
+	url = git@github.com:xyys2003/XML-Editor.git
