--- a/policies/Diffusion-Policy/diffusion_policy/config/task/default_task.yaml
+++ b/policies/Diffusion-Policy/diffusion_policy/config/task/default_task.yaml
@@ -38,13 +38,14 @@ env_runner:
   past_action: ${past_action_visible}
   n_envs: null
 
-dataset:
-  _target_: diffusion_policy.dataset.robot_image_dataset.RobotImageDataset
-  zarr_path: data/useless.zarr
-  horizon: ${horizon}
-  batch_size: ${dataloader.batch_size}
-  pad_before: ${eval:'${n_obs_steps}-1'}
-  pad_after: ${eval:'${n_action_steps}-1'}
-  seed: 42
-  val_ratio: 0.02
-  max_train_episodes: 90
+task:
+  dataset:
+    _target_: diffusion_policy.dataset.airbot_image_dataset.AirbotImageDataset
+    zarr_path: data/useless.zarr
+    horizon: ${horizon}
+    batch_size: ${dataloader.batch_size}
+    pad_before: ${eval:'${n_obs_steps}-1'}
+    pad_after: ${eval:'${n_action_steps}-1'}
+    seed: 42
+    val_ratio: 0.02
+    max_train_episodes: null
