--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,9 @@
 [submodule "submodules/MuJoCo-LiDAR"]
 	path = submodules/MuJoCo-LiDAR
 	url = https://github.com/TATP-233/MuJoCo-LiDAR
-[submodule "submodule/XML-Editor"]
-	path = submodule/XML-Editor
-	url = https://github.com/xyys2003/XML-Editor
 [submodule "submodules/lerobot"]
 	path = submodules/lerobot
 	url = https://github.com/huggingface/lerobot
+[submodule "submodules/XML-Editor"]
+	path = submodules/XML-Editor
+	url = https://github.com/xyys2003/XML-Editor.git
